<resources>
    <string name="app_name">MyBlogApp</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email Address</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="profile_set_up">Profile SetUp</string>
    <string name="username">Username</string>
    <string name="description_txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, accusantium adipisci aspernatur assumenda aut eius ex, excepturi fuga harum maiores, nam numquam porro provident quae quibusdam ratione sint vitae voluptas.</string>
    <string name="collection_Users">Users</string>
    <string name="storage_node_profile_images">Profile_Images</string>
    <string name="field_username">username</string>
    <string name="field_profile_image_url">profile_image_url</string>
    <string name="post">POST</string>
    <string name="add_description">Add Description</string>
    <string name="collection_Posts">Posts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="field_timestamp">timestamp</string>
    <string name="field_user_id">user_id</string>
    <string name="feild_description">description</string>
    <string name="feild_thumbnail_url">thumbnail_url</string>
    <string name="feild_image_url">image_url</string>
</resources>